<resources>
    <string name="app_name">GainzTracker</string>
    <string name="title_activity_login">Sign in</string>
    <string name="empty_login">This field can not be empty</string>
    <string name="handler_error">The activity does not implement the ItemHandlerInterface properly</string>
    <string name="empty_error">This field can not be empty</string>
    <string name="enter_workout_name">Enter workout name</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="upper_body">Upper Body</string>
    <string name="lower_body">Lower Body</string>
    <string name="core">Core</string>
    <string name="strength">Strength</string>
    <string name="endurance">Endurance</string>
    <string name="wednesday">Wednesday</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="select">Select</string>
    <string name="core_blast">Core Blast</string>
    <string name="ent_workout_name">Enter Workout Name</string>
    <string name="delete">DELETE</string>
    <string name="add_set">ADD SET</string>
    <string name="log_set">LOG SET</string>
    <string name="bench_press">Bench Press</string>
    <string name="edit">EDIT</string>
    <string name="mobility">Mobility</string>
    <string name="sets_left_3">Sets Left: 3</string>
    <string name="reps_10">Reps: 10</string>
    <string name="weight_45">Weight: 45</string>
    <string name="full_body_blast">Full Body Stretch</string>
    <string name="sets_left">Sets Left:</string>
    <string name="cur_reps">Reps:</string>
    <string name="cur_weight">Weight:</string>
    <string name="view_gainz">View Gainz</string>
    <string name="record_gainz">Record Gainz</string>
    <string name="new_exercise">New Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="registration">User Registered</string>
    <string name="reg_error">Register error:</string>
    <string name="new_workout">New Workout</string>
    <string name="edit_workout">Edit Workout</string>

</resources>
