<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#ffffff"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="98dp">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#7cfc00"
            android:text="@string/delete"
            android:textColor="#ffffff"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="172dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/mobility"
            android:textColor="#7cfc00"
            card_view:layout_constraintStart_toStartOf="@+id/tvName"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName" />

        <ImageView
            android:id="@+id/ivTypeIcon"
            android:layout_width="96dp"
            android:layout_height="95dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/mobility_workout_icon" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="175dp"
            android:layout_height="31dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/full_body_blast"
            android:textColor="#7cfc00"
            android:textSize="24sp"
            card_view:layout_constraintStart_toEndOf="@+id/ivTypeIcon"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEditExercise"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="#7cfc00"
            android:text="@string/edit"
            android:textColor="#ffffff"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>